test: Modulo Authentication Corrigiendo Test de Logout y Agregando test del método CheckRememberToken
